--- a/persistence/src/main/resources/application.properties
+++ b/persistence/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
+server.port=8181
