Huge commit concerning JMS and entity tests

--- a/persistence/src/main/resources/application.properties
+++ b/persistence/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/mytestdb
 spring.datasource.username=ivan
 spring.datasource.password=root
 
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
